# agent-devcontainer-lab

./: .gitignore  README.md  clean.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
assets/: for-loop-agent.mermaid
scripts/: post-create.sh  setup.sh  start-claude.sh
