[project]
name = "claude-remote"
version = "0.1.0"
description = "Dev container workspace for running Claude Code against GitHub Copilot models"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "poethepoet>=0.34,<0.35",
]

[tool.uv]
package = false

[tool.poe.tasks.proxy-auth]
help = "Authenticate copilot-api with GitHub Copilot"
cmd = "copilot-api auth"

[tool.poe.tasks.proxy-start]
help = "Start the Copilot proxy in Claude Code mode"
cmd = "copilot-api start --claude-code"

[tool.poe.tasks.proxy-models]
help = "List models exposed by the local proxy"
cmd = "curl http://localhost:4141/v1/models"

[tool.poe.tasks.proxy-usage]
help = "Show local usage endpoint and dashboard URL"
shell = "echo 'Local API: http://localhost:4141/usage' && echo 'Dashboard: https://ericc-ch.github.io/copilot-api?endpoint=http://localhost:4141/usage'"

[tool.poe.tasks.setup]
help = "Install missing global CLIs for non-devcontainer usage"
cmd = "./scripts/setup.sh"

[tool.poe.tasks.claude-chat]
help = "Launch Claude Code via wrapper script (supports optional model override)"
cmd = "./scripts/start-claude.sh"

[tool.poe.tasks.doctor]
help = "Verify the core CLI tools are installed"
shell = "claude --version && copilot-api --help >/dev/null && uv --version && poe --version"
